--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,2 @@
-# Core Dependencies
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-# sqlite3 is built-in to Python
-
-# Data Analysis & Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.15.0
-scipy>=1.11.0
-
-# Machine Learning
-scikit-learn>=1.3.0
-tensorflow>=2.13.0
-xgboost>=1.7.0
-
-# Financial Data
-yfinance>=0.2.0
-alpha-vantage>=2.3.0
-
-# Trading APIs
-alpaca-trade-api>=3.0.0
-
-# Web Scraping & Data Collection
-beautifulsoup4>=4.12.0
-selenium>=4.11.0
-schedule>=1.2.0
-
-# Sentiment Analysis
-textblob>=0.17.0
-tweepy>=4.14.0
-
-# Utilities
-python-dotenv>=1.0.0
-cryptography>=41.0.0
-# Built-in Python modules (no installation needed):
-# logging, datetime, json, os, sys, time, threading, concurrent.futures
-
-# Development & Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.7.0
-flake8>=6.0.0
-
-# Optional: Enhanced Features
-newspaper3k>=0.2.8
-nltk>=3.8.0
-spacy>=3.6.0
-
+Flask==2.3.3
+gunicorn==21.2.0
