🚨 NUCLEAR FIX: Remove all conflicting files to force simple_app deployment
DRASTIC MEASURES:
✅ Renamed src/api -> src/api_disabled (prevent Railway from finding complex API)
✅ Fixed nixpacks.toml to use requirements.txt and simple_app:app
✅ Disabled Dockerfile -> Dockerfile.disabled (let Railway auto-detect)
✅ Renamed app.py -> app_complex.py (remove confusion)

Railway MUST use simple_app.py now - no other Python apps available!

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,10 +3,10 @@
 nixPkgs = ["python39", "pip"]
 
 [phases.install]
-cmds = ["pip install -r requirements_minimal.txt"]
+cmds = ["pip install -r requirements.txt"]
 
 [phases.build]
 cmds = []
 
 [start]
-cmd = "gunicorn --bind 0.0.0.0:$PORT app:app"
+cmd = "gunicorn --bind 0.0.0.0:$PORT simple_app:app"
