🚨 FINAL SIMPLE FIX - Use Python directly, no PORT variable issues
SIMPLIFIED APPROACH:
✅ railway.toml: startCommand = 'python simple_app.py'
✅ Dockerfile: CMD ['python', 'simple_app.py']
✅ No shell scripts, no gunicorn, no $PORT expansion issues
✅ simple_app.py handles PORT internally with os.environ.get('PORT', 5000)

This HAS to work - it's the simplest possible configuration\!

--- a/railway.toml
+++ b/railway.toml
@@ -2,5 +2,5 @@
 builder = "dockerfile"
 
 [deploy]
-startCommand = "gunicorn --bind 0.0.0.0:$PORT simple_app:app"
+startCommand = "python simple_app.py"
 restartPolicyType = "ON_FAILURE"
